--- a/app/src/main/res/layout/activity_anxiety.xml
+++ b/app/src/main/res/layout/activity_anxiety.xml
@@ -7,10 +7,11 @@
     android:background="@color/Hex">
 
     <LinearLayout
-        android:id="@+id/activity_gad7"
+        android:id="@+id/ll"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+
         android:paddingLeft="16dp"
         android:paddingTop="16dp"
         android:paddingRight="16dp"
