--- a/app/src/main/res/layout/activity_ptsd_1.xml
+++ b/app/src/main/res/layout/activity_ptsd_1.xml
@@ -6,7 +6,7 @@
     android:background="@color/Hex">
 
     <LinearLayout
-        android:id="@+id/activity_gad7"
+        android:id="@+id/ll"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/Hex"
