--- a/app/src/main/res/layout/fragment_other.xml
+++ b/app/src/main/res/layout/fragment_other.xml
@@ -197,7 +197,7 @@
             app:layout_constraintVertical_bias="1.0" />
 
         <Button
-            android:id="@+id/tv_edit_tesst"
+            android:id="@+id/tv_edit_test"
             android:layout_width="145dp"
             android:layout_height="50dp"
             android:layout_marginStart="42dp"
