--- a/app/src/main/res/layout/activity_adhd.xml
+++ b/app/src/main/res/layout/activity_adhd.xml
@@ -42,7 +42,7 @@
             android:layout_marginStart="0dp"
             android:layout_marginTop="30dp"
             android:autoSizeTextType="uniform"
-            android:text="1"
+            android:text="@string/_1"
             android:textAllCaps="false"
             android:textColor="#234E70"
             android:textColorHighlight="#3F51B5"
