--- a/app/src/main/res/layout/activity_bipolar.xml
+++ b/app/src/main/res/layout/activity_bipolar.xml
@@ -42,7 +42,7 @@
             android:layout_marginStart="0dp"
             android:layout_marginTop="30dp"
             android:autoSizeTextType="uniform"
-            android:text="1"
+            android:text="@string/_1"
             android:textAllCaps="false"
             android:textColor="#234E70"
             android:textColorHighlight="#3F51B5"
@@ -59,7 +59,6 @@
             android:layout_marginTop="30dp"
             android:background="@drawable/rounded_button"
             android:backgroundTint="#C0B2E7"
-            android:text="bipA1"
             android:textAllCaps="false"
             android:textColor="#234E70"
             android:textColorHighlight="#664564"
@@ -77,7 +76,6 @@
             android:layout_marginTop="30dp"
             android:background="@drawable/rounded_button"
             android:backgroundTint="#C0B2E7"
-            android:text="bipA2"
             android:textAllCaps="false"
             android:textColor="#234E70"
             android:textColorHighlight="#664564"
@@ -95,7 +93,6 @@
             android:layout_marginTop="30dp"
             android:background="@drawable/rounded_button"
             android:backgroundTint="#C0B2E7"
-            android:text="bipA3"
             android:textAllCaps="false"
             android:textColor="#234E70"
             android:textColorHighlight="#664564"
@@ -113,7 +110,6 @@
             android:layout_marginTop="30dp"
             android:background="@drawable/rounded_button"
             android:backgroundTint="#C0B2E7"
-            android:text="bipA4"
             android:textAllCaps="false"
             android:textColor="#234E70"
             android:textColorHighlight="#664564"
@@ -131,7 +127,6 @@
             android:layout_marginTop="30dp"
             android:background="@drawable/rounded_button"
             android:backgroundTint="#C0B2E7"
-            android:text="bipA5"
             android:textAllCaps="false"
             android:textColor="#234E70"
             android:textColorHighlight="#664564"
@@ -149,7 +144,6 @@
             android:layout_marginTop="30dp"
             android:background="@drawable/rounded_button"
             android:backgroundTint="#C0B2E7"
-            android:text="bipA6"
             android:textAllCaps="false"
             android:textColor="#234E70"
             android:textColorHighlight="#664564"
