--- a/app/src/main/res/layout/activity_breathing.xml
+++ b/app/src/main/res/layout/activity_breathing.xml
@@ -31,7 +31,6 @@
             android:id="@+id/image_logo"
             android:layout_width="119dp"
             android:layout_height="107dp"
-            android:layout_below="@id/Email"
             android:layout_gravity="center"
             android:contentDescription="TODO"
             android:src="@drawable/vozyk_2_1"
@@ -45,227 +44,220 @@
 
     <LinearLayout
         android:id="@+id/breath_layout"
-        android:layout_width="380dp"
-        android:layout_height="match_parent"
+        android:layout_width="359dp"
+        android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="-70dp"
         android:layout_marginBottom="40dp"
         android:background="@color/Hex">
 
-        <ScrollView
+
+        <LinearLayout
+            android:id="@+id/container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent">
+            android:orientation="vertical"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingTop="@dimen/activity_vertical_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingBottom="@dimen/activity_vertical_margin"
+            tools:context=".ui.login.BreathingActivity">
 
-            <LinearLayout
-                android:id="@+id/container"
+            <TextView
+                android:id="@+id/tv_inhale"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingTop="@dimen/activity_vertical_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
-                android:paddingBottom="@dimen/activity_vertical_margin"
-                tools:context=".ui.login.BreathingActivity">
+                android:layout_marginTop="10dp"
+                android:gravity="center"
+                android:text="@string/i_want_to_inhale_for"
+                android:textColor="#234E70"
+                android:textSize="24sp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:orientation="horizontal">
+
+                <Spinner
+                    android:id="@+id/inhale"
+                    android:layout_width="100dp"
+                    android:layout_height="35dp"
+                    android:layout_marginStart="0dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="24dp"
+                    android:background="@android:drawable/btn_dropdown"
+                    android:spinnerMode="dropdown"
+                    android:textColor="#3F51B5"
+                    android:textColorHighlight="#3F51B5"
+                    android:textColorHint="#3F51B5"
+                    android:textColorLink="#3F51B5" />
 
                 <TextView
-                    android:id="@+id/inhaleLabel"
-                    android:layout_width="match_parent"
+                    android:id="@+id/tv_Inhale2"
+                    android:layout_width="80dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:gravity="center"
-                    android:text="@string/i_want_to_inhale_for"
+                    android:layout_marginStart="24dp"
+                    android:layout_marginTop="13dp"
+                    android:layout_marginEnd="24dp"
+                    android:ems="10"
+                    android:text="@string/seconds"
                     android:textColor="#234E70"
-                    android:textSize="24sp" />
+                    android:textSize="20sp" />
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_horizontal"
-                    android:orientation="horizontal">
-
-                    <Spinner
-                        android:id="@+id/inhale"
-                        android:layout_width="100dp"
-                        android:layout_height="35dp"
-                        android:layout_marginStart="0dp"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginEnd="24dp"
-                        android:background="@android:drawable/btn_dropdown"
-                        android:spinnerMode="dropdown"
-                        android:textColor="#3F51B5"
-                        android:textColorHighlight="#3F51B5"
-                        android:textColorHint="#3F51B5"
-                        android:textColorLink="#3F51B5" />
-
-                    <TextView
-                        android:id="@+id/secondsInhaleLabel"
-                        android:layout_width="80dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="24dp"
-                        android:layout_marginTop="13dp"
-                        android:layout_marginEnd="24dp"
-                        android:ems="10"
-                        android:text="@string/seconds"
-                        android:textColor="#234E70"
-                        android:textSize="20sp" />
-
-                </LinearLayout>
-
-                <TextView
-                    android:id="@+id/holdLabel"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:gravity="center"
-                    android:text="@string/i_want_to_hold_for"
-                    android:textColor="#234E70"
-                    android:textSize="24sp" />
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_horizontal"
-                    android:orientation="horizontal">
-
-                    <Spinner
-                        android:id="@+id/hold"
-                        android:layout_width="100dp"
-                        android:layout_height="35dp"
-                        android:layout_marginStart="0dp"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginEnd="24dp"
-                        android:background="@android:drawable/btn_dropdown"
-                        android:spinnerMode="dropdown"
-                        android:textColor="#3F51B5"
-                        android:textColorHighlight="#3F51B5"
-                        android:textColorHint="#3F51B5"
-                        android:textColorLink="#3F51B5" />
-
-                    <TextView
-                        android:id="@+id/holdInhaleLabel"
-                        android:layout_width="80dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="24dp"
-                        android:layout_marginTop="13dp"
-                        android:layout_marginEnd="24dp"
-                        android:ems="10"
-                        android:text="@string/seconds"
-                        android:textColor="#234E70"
-                        android:textSize="20sp" />
-
-                </LinearLayout>
-
-                <TextView
-                    android:id="@+id/exhaleLabel"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:gravity="center"
-                    android:text="@string/i_want_to_exhale_for"
-                    android:textColor="#234E70"
-                    android:textSize="24sp" />
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_horizontal"
-                    android:orientation="horizontal">
-
-                    <Spinner
-                        android:id="@+id/exhale"
-                        android:layout_width="100dp"
-                        android:layout_height="35dp"
-                        android:layout_marginStart="0dp"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginEnd="24dp"
-                        android:background="@android:drawable/btn_dropdown"
-                        android:spinnerMode="dropdown"
-                        android:textColor="#3F51B5"
-                        android:textColorHighlight="#3F51B5"
-                        android:textColorHint="#3F51B5"
-                        android:textColorLink="#3F51B5" />
-
-                    <TextView
-                        android:id="@+id/secondsExhaleLabel"
-                        android:layout_width="80dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="24dp"
-                        android:layout_marginTop="13dp"
-                        android:layout_marginEnd="24dp"
-                        android:ems="10"
-                        android:text="@string/seconds"
-                        android:textColor="#234E70"
-                        android:textSize="20sp" />
-
-                </LinearLayout>
-
-                <TextView
-                    android:id="@+id/breathsLabel"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:gravity="center"
-                    android:text="@string/for_for"
-                    android:textColor="#234E70"
-                    android:textSize="24sp" />
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_horizontal"
-                    android:orientation="horizontal">
-
-                    <Spinner
-                        android:id="@+id/breaths"
-                        android:layout_width="100dp"
-                        android:layout_height="35dp"
-                        android:layout_marginStart="0dp"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginEnd="24dp"
-                        android:background="@android:drawable/btn_dropdown"
-                        android:spinnerMode="dropdown"
-                        android:textColor="#3F51B5"
-                        android:textColorHighlight="#3F51B5"
-                        android:textColorHint="#3F51B5"
-                        android:textColorLink="#3F51B5" />
-
-                    <TextView
-                        android:id="@+id/numberOfBreathsLabel"
-                        android:layout_width="80dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="24dp"
-                        android:layout_marginTop="13dp"
-                        android:layout_marginEnd="24dp"
-                        android:ems="10"
-                        android:text="@string/cycles"
-                        android:textColor="#234E70"
-                        android:textSize="20sp" />
-
-                </LinearLayout>
-
-
-                <Button
-                    android:id="@+id/startButton"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="10dp"
-                    android:backgroundTint="@color/Raspberry"
-                    android:text="@string/start"
-                    android:textColor="#234E70"
-                    android:textColorHint="#664564"
-                    android:textColorLink="#664564"
-                    android:textSize="24sp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.498"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintVertical_bias="0.25" />
             </LinearLayout>
 
-        </ScrollView>
+            <TextView
+                android:id="@+id/tv_hold"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:gravity="center"
+                android:text="@string/i_want_to_hold_for"
+                android:textColor="#234E70"
+                android:textSize="24sp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:orientation="horizontal">
+
+                <Spinner
+                    android:id="@+id/hold"
+                    android:layout_width="100dp"
+                    android:layout_height="35dp"
+                    android:layout_marginStart="0dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="24dp"
+                    android:background="@android:drawable/btn_dropdown"
+                    android:spinnerMode="dropdown"
+                    android:textColor="#3F51B5"
+                    android:textColorHighlight="#3F51B5"
+                    android:textColorHint="#3F51B5"
+                    android:textColorLink="#3F51B5" />
+
+                <TextView
+                    android:id="@+id/tv_hold2"
+                    android:layout_width="80dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="24dp"
+                    android:layout_marginTop="13dp"
+                    android:layout_marginEnd="24dp"
+                    android:ems="10"
+                    android:text="@string/seconds"
+                    android:textColor="#234E70"
+                    android:textSize="20sp" />
+
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/tv_exhale"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:gravity="center"
+                android:text="@string/i_want_to_exhale_for"
+                android:textColor="#234E70"
+                android:textSize="24sp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:orientation="horizontal">
+
+                <Spinner
+                    android:id="@+id/exhale"
+                    android:layout_width="100dp"
+                    android:layout_height="35dp"
+                    android:layout_marginStart="0dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="24dp"
+                    android:background="@android:drawable/btn_dropdown"
+                    android:spinnerMode="dropdown"
+                    android:textColor="#3F51B5"
+                    android:textColorHighlight="#3F51B5"
+                    android:textColorHint="#3F51B5"
+                    android:textColorLink="#3F51B5" />
+
+                <TextView
+                    android:id="@+id/tv_exhale2"
+                    android:layout_width="80dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="24dp"
+                    android:layout_marginTop="13dp"
+                    android:layout_marginEnd="24dp"
+                    android:ems="10"
+                    android:text="@string/seconds"
+                    android:textColor="#234E70"
+                    android:textSize="20sp" />
+
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/tv_breath"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:gravity="center"
+                android:text="@string/for_for"
+                android:textColor="#234E70"
+                android:textSize="24sp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:orientation="horizontal">
+
+                <Spinner
+                    android:id="@+id/breaths"
+                    android:layout_width="100dp"
+                    android:layout_height="35dp"
+                    android:layout_marginStart="0dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="24dp"
+                    android:background="@android:drawable/btn_dropdown"
+                    android:spinnerMode="dropdown"
+                    android:textColor="#3F51B5"
+                    android:textColorHighlight="#3F51B5"
+                    android:textColorHint="#3F51B5"
+                    android:textColorLink="#3F51B5" />
+
+                <TextView
+                    android:id="@+id/tv_breath_cycles"
+                    android:layout_width="80dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="24dp"
+                    android:layout_marginTop="13dp"
+                    android:layout_marginEnd="24dp"
+                    android:ems="10"
+                    android:text="@string/cycles"
+                    android:textColor="#234E70"
+                    android:textSize="20sp" />
+
+            </LinearLayout>
+
+
+            <Button
+                android:id="@+id/startButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="10dp"
+                android:backgroundTint="@color/Raspberry"
+                android:text="@string/start"
+                android:textColor="#234E70"
+                android:textColorHint="#664564"
+                android:textColorLink="#664564"
+                android:textSize="24sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.498"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintVertical_bias="0.25" />
+        </LinearLayout>
+
     </LinearLayout>
 </LinearLayout>
