--- a/app/src/main/res/layout/activity_delete_acount.xml
+++ b/app/src/main/res/layout/activity_delete_acount.xml
@@ -19,7 +19,7 @@
         android:layout_marginBottom="472dp"
         android:autofillHints=""
         android:ems="10"
-        android:hint="Email"
+        android:hint="@string/email"
         android:inputType="textEmailAddress"
         android:padding="10dp"
         android:textColor="#234E70"
@@ -39,7 +39,7 @@
         android:layout_marginBottom="392dp"
         android:autofillHints=""
         android:ems="10"
-        android:hint="Password"
+        android:hint="@string/password"
         android:inputType="textPassword"
         android:padding="10dp"
         android:textColor="#234E70"
@@ -56,7 +56,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="28dp"
         android:layout_marginEnd="16dp"
-        android:text="Submit Here"
+        android:text="@string/submit_here"
         android:textColor="#234E70"
         android:textSize="13sp"
         app:layout_constraintEnd_toEndOf="parent"
