--- a/app/src/main/res/layout/activity_doctor.xml
+++ b/app/src/main/res/layout/activity_doctor.xml
@@ -13,7 +13,7 @@
         android:layout_height="match_parent">
 
         <ListView
-            android:id="@+id/doctor_listview"
+            android:id="@+id/lv_doctor"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="130dp"
@@ -24,7 +24,7 @@
         </ListView>
 
         <ImageView
-            android:id="@+id/doctor_empty"
+            android:id="@+id/iv_doctor_empty"
             android:layout_width="match_parent"
             android:layout_height="250dp"
             android:layout_alignParentEnd="true"
@@ -36,7 +36,7 @@
             app:srcCompat="@drawable/doctor" />
 
         <TextView
-            android:id="@+id/doctor_emptyText"
+            android:id="@+id/tv_no_visits"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
@@ -49,7 +49,7 @@
             android:textSize="30sp" />
 
         <TextView
-            android:id="@+id/doctor_textView2"
+            android:id="@+id/tv_your_visits"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
@@ -60,8 +60,8 @@
             android:text="@string/your_appointments"
             android:textColor="#234E70"
             android:textSize="35sp"
-            app:layout_constraintBottom_toTopOf="@+id/doctor_listview"
-            app:layout_constraintStart_toStartOf="@+id/doctor_listview" />
+            app:layout_constraintBottom_toTopOf="@+id/lv_doctor"
+            app:layout_constraintStart_toStartOf="@+id/lv_doctor" />
     </RelativeLayout>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
