--- a/app/src/main/res/layout/activity_lab.xml
+++ b/app/src/main/res/layout/activity_lab.xml
@@ -13,16 +13,16 @@
         android:layout_height="match_parent">
 
         <ListView
-            android:id="@+id/lab_listview"
+            android:id="@+id/lv_lab"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="130dp"
             android:background="@color/Hex"
             android:paddingTop="10dp"
-            android:paddingBottom="40dp"></ListView>
+            android:paddingBottom="40dp" />
 
         <ImageView
-            android:id="@+id/lab_empty"
+            android:id="@+id/iv_lab_empty"
             android:layout_width="match_parent"
             android:layout_height="250dp"
             android:layout_alignParentEnd="true"
@@ -34,7 +34,7 @@
             app:srcCompat="@drawable/labs" />
 
         <TextView
-            android:id="@+id/lab_emptyText"
+            android:id="@+id/tv_no_labs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
@@ -47,7 +47,7 @@
             android:textSize="30sp" />
 
         <TextView
-            android:id="@+id/lab_textView2"
+            android:id="@+id/tv_your_labs"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
@@ -58,8 +58,8 @@
             android:text="@string/your_lab_tests"
             android:textColor="#234E70"
             android:textSize="35sp"
-            app:layout_constraintBottom_toTopOf="@+id/lab_listview"
-            app:layout_constraintStart_toStartOf="@+id/lab_listview" />
+            app:layout_constraintBottom_toTopOf="@+id/lv_lab"
+            app:layout_constraintStart_toStartOf="@+id/lv_lab" />
     </RelativeLayout>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
