--- a/app/src/main/res/layout/activity_todo.xml
+++ b/app/src/main/res/layout/activity_todo.xml
@@ -18,7 +18,7 @@
         android:paddingTop="20dp">
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/iv_logo"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:clickable="false"
@@ -40,7 +40,7 @@
             android:layout_height="50dp"
             android:layout_marginHorizontal="30dp"
             android:backgroundTint="@color/Bluebell"
-            android:text="+"
+            android:text="@string/plus"
             android:textColor="#234E70"
             android:textSize="25sp" />
 
@@ -53,16 +53,16 @@
             android:orientation="horizontal">
 
             <Button
-                android:id="@+id/viewCompletedButton"
+                android:id="@+id/bt_completed"
                 style="?android:attr/buttonBarButtonStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/RobbinsEggBlue"
                 android:text="@string/my_completed_tasks"
-                android:textColor="#234E70"></Button>
+                android:textColor="#234E70" />
 
             <Button
-                android:id="@+id/viewIncompletedButton"
+                android:id="@+id/bt_in_completed"
                 style="?android:attr/buttonBarButtonStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
