--- a/app/src/main/res/layout/custom_list_view.xml
+++ b/app/src/main/res/layout/custom_list_view.xml
@@ -6,7 +6,7 @@
     android:background="@color/Hex">
 
     <TextView
-        android:id="@+id/name_view"
+        android:id="@+id/tv_meds_name"
         android:layout_width="wrap_content"
         android:layout_height="37dp"
         android:layout_alignParentStart="true"
@@ -21,7 +21,7 @@
         tools:layout_editor_absoluteY="18dp" />
 
     <TextView
-        android:id="@+id/time_view"
+        android:id="@+id/tv_meds_time"
         android:layout_width="219dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -35,7 +35,7 @@
         tools:layout_editor_absoluteY="63dp" />
 
     <TextView
-        android:id="@+id/food_view"
+        android:id="@+id/tv_meds_food"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -83,7 +83,7 @@
         android:id="@+id/note_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/time_view"
+        android:layout_alignBottom="@+id/tv_meds_time"
         android:layout_alignParentStart="true"
         android:layout_marginStart="10dp"
         android:layout_marginBottom="17dp"
