--- a/app/src/main/res/layout/doctor_custom_list_view.xml
+++ b/app/src/main/res/layout/doctor_custom_list_view.xml
@@ -6,7 +6,7 @@
     android:background="@color/Hex">
 
     <TextView
-        android:id="@+id/doc_name_view"
+        android:id="@+id/tv_doc_name"
         android:layout_width="wrap_content"
         android:layout_height="37dp"
         android:layout_alignParentStart="true"
@@ -21,7 +21,7 @@
         tools:layout_editor_absoluteY="18dp" />
 
     <TextView
-        android:id="@+id/doc_time_view"
+        android:id="@+id/tv_doc_time"
         android:layout_width="219dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -35,7 +35,7 @@
         tools:layout_editor_absoluteY="63dp" />
 
     <TextView
-        android:id="@+id/doc_reason"
+        android:id="@+id/tv_doc_reason"
         android:layout_width="196dp"
         android:layout_height="33dp"
         android:layout_alignParentStart="true"
