--- a/app/src/main/res/layout/fragment_meds.xml
+++ b/app/src/main/res/layout/fragment_meds.xml
@@ -19,10 +19,10 @@
             android:layout_marginTop="130dp"
             android:background="@color/Hex"
             android:paddingTop="10dp"
-            android:paddingBottom="40dp"></ListView>
+            android:paddingBottom="40dp" />
 
         <ImageView
-            android:id="@+id/empty"
+            android:id="@+id/iv_no_meds"
             android:layout_width="match_parent"
             android:layout_height="250dp"
             android:layout_alignParentEnd="true"
@@ -34,7 +34,7 @@
             app:srcCompat="@drawable/pills" />
 
         <TextView
-            android:id="@+id/emptyText"
+            android:id="@+id/tv_no_meds"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
@@ -47,7 +47,7 @@
             android:textSize="30sp" />
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/tv_your_meds"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
