<version new> fixed

--- a/app/src/main/res/layout/activity_anxiety.xml
+++ b/app/src/main/res/layout/activity_anxiety.xml
@@ -16,7 +16,7 @@
         android:paddingTop="16dp"
         android:paddingRight="16dp"
         android:paddingBottom="16dp"
-        tools:context=".ui.anxiety.anxietyActivity">
+        tools:context=".ui.anxiety.Anxiety">
 
         <TextView
             android:id="@+id/general"
