--- a/app/src/main/res/layout/activity_anxiety_results.xml
+++ b/app/src/main/res/layout/activity_anxiety_results.xml
@@ -10,7 +10,7 @@
     android:paddingTop="16dp"
     android:paddingRight="16dp"
     android:paddingBottom="16dp"
-    tools:context=".ui.anxiety.anxietyResultActivity">
+    tools:context=".ui.anxiety.AnxietyResult">
 
 
     <ImageView
