--- a/app/src/main/res/layout/activity_bipolar.xml
+++ b/app/src/main/res/layout/activity_bipolar.xml
@@ -16,7 +16,7 @@
         android:paddingTop="16dp"
         android:paddingRight="16dp"
         android:paddingBottom="16dp"
-        tools:context=".ui.bipolar.bipolarActivity">
+        tools:context=".ui.bipolar.Bipolar">
 
         <TextView
             android:id="@+id/general"
