--- a/app/src/main/res/layout/activity_ptsd_1.xml
+++ b/app/src/main/res/layout/activity_ptsd_1.xml
@@ -15,7 +15,7 @@
         android:paddingTop="16dp"
         android:paddingRight="16dp"
         android:paddingBottom="16dp"
-        tools:context=".ui.ptsd.ptsd">
+        tools:context=".ui.ptsd.Ptsd">
 
         <TextView
             android:id="@+id/question"
