--- a/app/src/main/res/layout/activity_ptsd_results_2.xml
+++ b/app/src/main/res/layout/activity_ptsd_results_2.xml
@@ -10,7 +10,7 @@
     android:paddingTop="16dp"
     android:paddingRight="16dp"
     android:paddingBottom="16dp"
-    tools:context=".ui.ptsd.ptsdResultActivity">
+    tools:context=".ui.ptsd.PtsdResult">
 
 
     <ImageView
