--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#E7E8D1"
-    tools:context=".ui.about.About_us">
+    tools:context=".ui.about.AboutUs">
 
 
     <TextView
