--- a/app/src/main/res/layout/activity_adhd.xml
+++ b/app/src/main/res/layout/activity_adhd.xml
@@ -16,7 +16,7 @@
         android:paddingTop="16dp"
         android:paddingRight="16dp"
         android:paddingBottom="16dp"
-        tools:context=".ui.adhd.adhdActivity">
+        tools:context=".ui.adhd.Adhd">
 
         <TextView
             android:id="@+id/general"
