--- a/app/src/main/res/layout/activity_bipolar_result.xml
+++ b/app/src/main/res/layout/activity_bipolar_result.xml
@@ -11,7 +11,7 @@
     android:paddingTop="16dp"
     android:paddingRight="16dp"
     android:paddingBottom="16dp"
-    tools:context=".ui.bipolar.bipolarResultActivity">
+    tools:context=".ui.bipolar.bipolarResult">
 
     <ImageView
         android:id="@+id/Logo"
