--- a/app/src/main/res/layout/activity_doctor.xml
+++ b/app/src/main/res/layout/activity_doctor.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/Hex"
-    tools:context=".ui.doctor.DoctorActivity">
+    tools:context=".ui.doctor.Doctor">
 
     <RelativeLayout
         android:layout_width="match_parent"
