--- a/app/src/main/res/layout/activity_lab_add.xml
+++ b/app/src/main/res/layout/activity_lab_add.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/Hex"
-    tools:context=".ui.lab.labAddActivity">
+    tools:context=".ui.lab.LabAdd">
 
     <TextView
         android:id="@+id/tv_add_lab"
