--- a/app/src/main/res/layout/activity_ocd_result.xml
+++ b/app/src/main/res/layout/activity_ocd_result.xml
@@ -11,7 +11,7 @@
     android:paddingTop="16dp"
     android:paddingRight="16dp"
     android:paddingBottom="16dp"
-    tools:context=".ui.adhd.adhdResultActivity">
+    tools:context=".ui.adhd.AdhdResult">
 
     <ImageView
         android:id="@+id/Logo"
