--- a/app/src/main/res/layout/activity_ptsd_results_1.xml
+++ b/app/src/main/res/layout/activity_ptsd_results_1.xml
@@ -4,6 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/Hex"
-    tools:context=".ui.ptsd.ptsdResultActivity">
+    tools:context=".ui.ptsd.PtsdResult">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
