<version new> fixed

--- a/app/src/main/res/layout/activity_add_meds.xml
+++ b/app/src/main/res/layout/activity_add_meds.xml
@@ -162,7 +162,7 @@
         app:layout_constraintTop_toBottomOf="@+id/toggleButton1" />
 
     <TextView
-        android:id="@+id/tv_add_lab"
+        android:id="@+id/appName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="74dp"
@@ -190,7 +190,7 @@
         app:layout_constraintBottom_toTopOf="@+id/imageView2"
         app:layout_constraintEnd_toStartOf="@+id/name"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_add_lab" />
+        app:layout_constraintTop_toBottomOf="@+id/appName" />
 
     <ImageView
         android:id="@+id/imageView2"
