--- a/app/src/main/res/layout/activity_lab_add.xml
+++ b/app/src/main/res/layout/activity_lab_add.xml
@@ -8,7 +8,7 @@
     tools:context=".ui.lab.LabAdd">
 
     <TextView
-        android:id="@+id/tv_add_lab"
+        android:id="@+id/appName"
         android:layout_width="411dp"
         android:layout_height="wrap_content"
         android:background="@color/YellowAeroSpace"
@@ -31,7 +31,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         android:layout_marginEnd="32dp"
-        android:hint="Doctor Name"
+        android:hint="@string/doctor_name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/lab_name">
 
@@ -51,9 +51,9 @@
         android:layout_height="60dp"
         android:layout_marginTop="84dp"
         android:layout_marginEnd="32dp"
-        android:hint="Test Name"
+        android:hint="@string/lab_test_name"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_add_lab">
+        app:layout_constraintTop_toBottomOf="@+id/appName">
 
         <AutoCompleteTextView
             android:id="@+id/lab_name_edit"
@@ -73,13 +73,13 @@
         android:layout_height="59dp"
         android:layout_marginEnd="68dp"
         android:contentDescription="TODO"
-        app:layout_constraintBottom_toBottomOf="@+id/tv_lab_date"
-        app:layout_constraintEnd_toStartOf="@+id/tv_lab_date"
-        app:layout_constraintTop_toTopOf="@+id/tv_lab_date"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_labDate"
+        app:layout_constraintEnd_toStartOf="@+id/tv_labDate"
+        app:layout_constraintTop_toTopOf="@+id/tv_labDate"
         app:srcCompat="@drawable/calendar" />
 
     <TextView
-        android:id="@+id/tv_lab_date"
+        android:id="@+id/tv_labDate"
         android:layout_width="157dp"
         android:layout_height="46dp"
         android:layout_marginTop="60dp"
@@ -115,7 +115,7 @@
         app:srcCompat="@drawable/doctor" />
 
     <Button
-        android:id="@+id/lab_add_btn"
+        android:id="@+id/labAdd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="128dp"
